examples/test/testpolicy5950.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5950
  namespace: namespace103
spec:
  podSelector:
    matchLabels:
      key38: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value4
          key32: value20
      podSelector:
        matchLabels:
          key17: value4
          key27: value22
